temp - my current code

--- a/backend/views/user/home.ejs
+++ b/backend/views/user/home.ejs
@@ -1714,7 +1714,7 @@
           <span>Account</span>
         </a>
       </div><!-- /.col-3 -->
-    </div><!-- /.row -->
+    </div>
   </footer>
 
 
