--- a/backend/views/user/cart.ejs
+++ b/backend/views/user/cart.ejs
@@ -475,7 +475,7 @@
             <em>Manage Your Items List</em>
           </span>
         </a>
-        <a href="checkout.html" class="checkout-steps__item">
+        <a href="/checkout" class="checkout-steps__item">
           <span class="checkout-steps__item-number">02</span>
           <span class="checkout-steps__item-title">
             <span>Shipping and Checkout</span>
