--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -4876,6 +4876,8 @@ progress {
 .text-success {
   color: #def2d7 !important;
 }
+
+
 .wish-add-btn{
   background-color: #3B1D58!important;
   &:hover{
@@ -19061,6 +19063,8 @@ textarea.form-control.is-invalid {
   overflow: hidden;
 }
 
+
+.mobile-menu-opened 
 .mobile-menu-opened .header-mobile {
   z-index: 1050;
 }
